[gd_scene load_steps=2 format=2]

[ext_resource path="res://addons/fantasy_map_editor/EditorPropertyPanel.gd" type="Script" id=1]

[node name="PropertyPanel" type="PopupPanel"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -260.0
margin_top = -200.0
rect_min_size = Vector2( 250, 200 )
size_flags_horizontal = 0
size_flags_vertical = 0
popup_exclusive = true
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 4.0
margin_right = -4.0
margin_bottom = -4.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridContainer" type="GridContainer" parent="MarginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 242.0
margin_bottom = 182.0
columns = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SizeLabel" type="Label" parent="MarginContainer/GridContainer"]
margin_top = 5.0
margin_right = 154.0
margin_bottom = 19.0
size_flags_horizontal = 3
text = "Size"
align = 1
valign = 1

[node name="SizeValue" type="SpinBox" parent="MarginContainer/GridContainer"]
margin_left = 158.0
margin_right = 232.0
margin_bottom = 24.0
size_flags_horizontal = 3
min_value = 1.0
value = 16.0
rounded = true
align = 1

[node name="PointsLabel" type="Label" parent="MarginContainer/GridContainer"]
margin_top = 33.0
margin_right = 154.0
margin_bottom = 47.0
size_flags_horizontal = 3
text = "Points"
align = 1
valign = 1

[node name="PointsValue" type="SpinBox" parent="MarginContainer/GridContainer"]
margin_left = 158.0
margin_top = 28.0
margin_right = 232.0
margin_bottom = 52.0
size_flags_horizontal = 3
min_value = 8.0
max_value = 100.0
value = 24.0
rounded = true
align = 1

[node name="EdgeRandomLabel" type="Label" parent="MarginContainer/GridContainer"]
margin_top = 61.0
margin_right = 154.0
margin_bottom = 75.0
size_flags_horizontal = 3
text = "Edge random coefficient"
align = 1
valign = 1

[node name="EdgeRandomValue" type="SpinBox" parent="MarginContainer/GridContainer"]
margin_left = 158.0
margin_top = 56.0
margin_right = 232.0
margin_bottom = 80.0
size_flags_horizontal = 3
max_value = 1.0
step = 0.1
value = 0.3
align = 1
[connection signal="value_changed" from="MarginContainer/GridContainer/SizeValue" to="." method="_on_SizeValue_value_changed"]
[connection signal="value_changed" from="MarginContainer/GridContainer/PointsValue" to="." method="_on_PointsValue_value_changed"]
[connection signal="value_changed" from="MarginContainer/GridContainer/EdgeRandomValue" to="." method="_on_EdgeRandomValue_value_changed"]
